# org.alloytools.alloy

./: .gitignore  .gitmodules  .project  .travis  .travis.yml  0.smt.xml  CONTRIBUTING.md  README-dash.md  README.md  alloy_example_output.xml  build.gradle  build.xml  gradle.properties  gradlew.bat  mkdist.sh  package.json  pbuild.sh  pom.xml  settings.gradle  t  test.als  xt.sh
.workflow/: .project
AlloyMC_expAlloyModels/: addressBook1g.als  bst.als  dllist.als  farmer.als  hotel3.als  life.als  messaging.als  p300-hotel.als  queens.als  rbt.als
SMT-Extension/: .classpath  .gitignore  .project  README.md  bnd.bnd  build.gradle
alloy2smt/: .gitignore  LICENSE  README.md  build.gradle
cnf/: .classpath  .project  build.bnd  central.mvn  central.xml
examples/: test.als
figures/: AlloyMC.odp  AlloyMCGrammar.tex  all.pptx  example-model.tex  example.txt
org.alloytools.alloy.api/: .classpath  .project  Alloy.md  bnd.bnd  readme.md
org.alloytools.alloy.application/: .classpath  .project  CompParser.java  CompSym.java  alloy_example_output.xml  bnd.bnd  build.gradle  test.dsh.als  test.dsh.dsh
org.alloytools.alloy.classic.provider/: .project  bnd.bnd
org.alloytools.alloy.classic.test/: .classpath  .project  bnd.bnd
org.alloytools.alloy.cli/: .project  bnd.bnd  test.als  test2.als  test3.als  test4.als
org.alloytools.alloy.core/: .classpath  .gitignore  .project  bnd.bnd  build.gradle  test.dsh
org.alloytools.alloy.core.provider/: .classpath  .project  bnd.bnd  debug.bndrun  org.alloytools.alloy.core.provider.bndrun  readme.md
org.alloytools.alloy.dash/: .classpath  .project  bnd.bnd  build.gradle  test.dsh.als  test.dsh.dsh
org.alloytools.alloy.dashbuild/: bnd.bnd  build.gradle
org.alloytools.alloy.dist/: .classpath  .gitignore  .project  bnd.bnd  build.gradle  macos
org.alloytools.alloy.extra/: .classpath  .project  bnd.bnd  build.gradle
org.alloytools.alloy.java/: .project  AlloyJava.java
org.alloytools.alloy.junit/: bnd.bnd  debug.bndrun  org.alloytools.alloy.junit.bndrun  readme.md
org.alloytools.alloy.lsp/: .classpath  .project  bnd.bnd
org.alloytools.alloy.shell/: .project
org.alloytools.alloy.test/: .classpath  .project  bnd.bnd
org.alloytools.alloy.wrappers/: .classpath  .project  java_cup.bnd  jflex.bnd
org.alloytools.api/: .classpath  .project  bnd.bnd
org.alloytools.kodkod.core/: .classpath  .gitignore  .project  LICENSE  README.md  bnd.bnd  build.gradle  release.properties  release.xml
org.alloytools.kodkod.nativesat/: .classpath  .project  amd64-linux.bnd  amd64-windows.bnd  bnd.bnd  build.gradle  shared.bnd  util.bnd  x64-mac.bnd  x86-linux.bnd  x86-mac.bnd  x86-windows.bnd
org.alloytools.kodkod.sat4j/: .classpath  .project  bnd.bnd
org.alloytools.pardinus/: .project
org.alloytools.pardinus.core/: .project  bnd.bnd
org.alloytools.pardinus.native/: .project  bnd.bnd  readme.md
org.alloytools.pardinus.native/native-code/glucose/: CMakeLists.txt
org.alloytools.pardinus.native/native-code/lingeling/: CMakeLists.txt
org.alloytools.pardinus.native/native-code/minisat/: CMakeLists.txt  MiniSat.cc
org.alloytools.pardinus.native/satsolvers/minisatprover/: CMakeLists.txt
org.alloytools.util/: .project  bnd.bnd
org.sat4j.core/: .classpath  .cvsignore  .fbprefs  .pmd  .project  LICENSE.txt  build.properties  features.properties  plugin.properties  pom.xml
test/: abt.als  age.als  age_0.als  age_1.als  cf.als  (+18 more)
(+3255 files in other folders)
